--- a/css/style2.css
+++ b/css/style2.css
@@ -20,10 +20,10 @@ a {
   justify-content: center;
 }
 
-#buttonTwo {
+#button-two {
   margin-left: 46.8%;
 }
 
-#buttonThree {
+#button-three {
   margin-left: 45.1%;
 }
