--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: rgba(145 17 145 / 43.8);
+  background-color: rgba(145 17 145 / 4380%);
 }
 
 a {
@@ -35,6 +35,6 @@ a {
   color: white;
 }
 
-#buttonOne {
+#button-one {
   margin-left: 60px;
 }
